[eunji][#update]업무담당자 수정 예외처리 및 기업 등록/검색 구현중

--- a/KosaESS/src/main/resources/static/css/admin/company_list.css
+++ b/KosaESS/src/main/resources/static/css/admin/company_list.css
@@ -51,6 +51,65 @@ a {
 	margin-right: 20px;
 }
 
+
+
+.content_search {
+	display: flex;
+	align-items: center;
+    justify-content: space-between;
+	border-top: 2px solid #0E5881;
+	border-bottom: 1px solid #0E5881;
+	padding: 5px;
+	background: #E7EFF3;
+	align-items: center;
+}
+
+.search_filter_wrap {
+	display: flex;
+}
+
+.filter_box {
+	display: flex;
+	margin: 3px 20px 3px 20px;
+	color: #0E5881;
+	font-weight: bold;
+	font-size: 15px;
+}
+
+.filter_box_title {
+	margin-right: 20px;
+}
+
+.search_filter_btn_wrap {
+	display: flex;
+	align-items: center;
+}
+
+.search_filter_btn_wrap button {
+	text-align: center;
+	color: white;
+	font-weight: bold;
+	border: none;
+	margin: 2px;
+	border-radius: 3px;
+	padding: 5px;
+	display: flex;
+	cursor: pointer;
+}
+
+.search_filter_btn_wrap button img {
+	width: 20px;
+}
+
+.search_filter_btn_wrap .search_reset_btn {
+	background: #9FBCCD;
+}
+
+.search_filter_btn_wrap .search_filter_btn {
+	background: #0E5881;
+}
+
+
 .content_middle .right_section {
 	width: 45%;
 	height: 100%;
@@ -103,13 +162,18 @@ a {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	margin-top: 10px;
 }
 
 .content_info_wrap .cnt {
 	color: #0E5881;
 }
 
-.content_info_wrap button {
+.content_info_btn_wrap {
+	display: flex;
+}
+
+.content_info_btn_wrap button {
 	border: none;
 	border-radius: 3px;
 	background: #0E5881;
@@ -120,6 +184,7 @@ a {
 	padding: 5px;
 	height: 30px;
 	display: flex;
+	align-items: center;
 	cursor: pointer;
 }
 
@@ -218,7 +283,7 @@ a {
 	text-decoration: none;
 }
 
-.pagination li a{
+.pagination li a {
 	color: black;
 	font-weight: bold;
 	text-decoration: none;
@@ -230,8 +295,8 @@ a {
 	border-radius: 5px;
 }
 
-.pagination li.active a{
-	color:white;
+.pagination li.active a {
+	color: white;
 }
 
 .pagination li:hover:not(.active) {
