--- a/KosaESS/src/main/resources/static/css/admin/notice_list.css
+++ b/KosaESS/src/main/resources/static/css/admin/notice_list.css
@@ -99,7 +99,7 @@
 	justify-content: space-between;
 }
 
-.home-section .content_bottom .content_info_wrap .class_list_cnt {
+.home-section .content_bottom .content_info_wrap .notice_list_cnt {
 	color: #0E5881;
 }
 
