--- a/KosaESS/src/main/resources/static/css/admin/inquiry_list.css
+++ b/KosaESS/src/main/resources/static/css/admin/inquiry_list.css
@@ -100,7 +100,7 @@
 	justify-content: space-between;
 }
 
-.home-section .content_bottom .content_info_wrap .class_list_cnt {
+.home-section .content_bottom .content_info_wrap .inquiry_list_cnt {
 	color: #0E5881;
 }
 
