--- a/KosaESS/src/main/resources/templates/admin/inquiry_list.html
+++ b/KosaESS/src/main/resources/templates/admin/inquiry_list.html
@@ -40,7 +40,8 @@
 						</select>
 					</div>
 					<div>
-						<input class="search_input" type="text" id="search_input" value="">
+						<input class="search_input" type="text" id="search_input" value=""
+						onkeyup="if(window.event.keyCode==13){search();}">
 					</div>
 				</div>
 
